Added glossary stuff.

--- a/packages/Harvard/style.sty
+++ b/packages/Harvard/style.sty
@@ -92,3 +92,10 @@
 	\input{source/frontmatter/thanks}
 	\vspace*{\fill}
 }
+
+\newcommand{\maketheglossary}{
+	\chapter*{Glossary}
+	\noindent
+	\input{source/frontmatter/glossary}
+	\vspace*{\fill}
+}
