Updated various documents.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -15,6 +15,7 @@
 \usepackage{excludeonly}
 \usepackage{fancyvrb}
 \usepackage{imakeidx}
+\usepackage{lipsum}
 \usepackage{listings}
 \usepackage{microtype}
 \usepackage{multicol}
@@ -105,7 +106,6 @@
 %\listoffigures
 \dedicationpage
 \acknowledgments
-\maketheglossary
 
 \mainmatter
 \doublespacing
@@ -156,6 +156,8 @@
 
 \cleardoublepage
 \printindex
+
+\maketheglossary
 
 \cleardoublepage
 \addcontentsline{toc}{chapter}{References}
