--- a/packages/Harvard/style.sty
+++ b/packages/Harvard/style.sty
@@ -95,7 +95,8 @@
 
 \newcommand{\maketheglossary}{
 	\chapter*{Glossary}
+    \addcontentsline{toc}{chapter}{Glossary}
 	\noindent
-	\input{source/frontmatter/glossary}
+	\input{source/endmatter/glossary}
 	\vspace*{\fill}
 }
