--- a/source/appendices/appendices.tex
+++ b/source/appendices/appendices.tex
@@ -1,3 +1,4 @@
 \input{source/appendices/consort/index.tex}
 \input{source/appendices/zaira/index.tex}
 \input{source/appendices/armilla/index.tex}
+\input{source/appendices/ersilia/index.tex}
