Cleaned up bibliography, renamed dissertation.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -161,6 +161,7 @@
 
 \cleardoublepage
 \addcontentsline{toc}{chapter}{References}
+\nocite{*}
 \bibliographystyle{apalike2}
 \bibliography{references}
 
