--- a/references.bib
+++ b/references.bib
@@ -23,9 +23,7 @@
 	Isbn = {0262033844},
 	Publisher = {The MIT Press},
 	Title = {Introduction to Algorithms, 3rd Edition},
-	Url = {http://www.amazon.com/Introduction-Algorithms-Edition-Thomas-Cormen/dp/0262033844%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0262033844},
 	Year = {2009},
-	Bdsk-Url-1 = {http://www.amazon.com/Introduction-Algorithms-Edition-Thomas-Cormen/dp/0262033844%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0262033844}}
 
 @book{lerdahl1985generative,
 	Author = {Lerdahl, Fred and Jackendoff, Ray},
@@ -42,9 +40,7 @@
 	Isbn = {0689300549},
 	Publisher = {Atheneum},
 	Title = {The Farthest Shore},
-	Url = {http://www.amazon.com/The-Farthest-Shore-Ursula-LeGuin/dp/0689300549%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0689300549},
 	Year = {1972},
-	Bdsk-Url-1 = {http://www.amazon.com/The-Farthest-Shore-Ursula-LeGuin/dp/0689300549%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0689300549}}
 
 @book{calvino1978invisible,
 	Author = {Italo Calvino},
@@ -53,9 +49,7 @@
 	Isbn = {0156453800},
 	Publisher = {Harcourt Brace Jovanovich},
 	Title = {Invisible Cities},
-	Url = {http://www.amazon.com/Invisible-Cities-Italo-Calvino/dp/0156453800%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0156453800},
 	Year = {1978},
-	Bdsk-Url-1 = {http://www.amazon.com/Invisible-Cities-Italo-Calvino/dp/0156453800%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0156453800}}
 
 @book{marriott1998programming,
 	Author = {Marriott, Kim and Stuckey, Peter J},
@@ -115,9 +109,7 @@
 	Isbn = {0136042597},
 	Publisher = {Prentice Hall},
 	Title = {Artificial Intelligence: A Modern Approach (3rd Edition)},
-	Url = {http://www.amazon.com/Artificial-Intelligence-Modern-Approach-Edition/dp/0136042597%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0136042597},
 	Year = {2009},
-	Bdsk-Url-1 = {http://www.amazon.com/Artificial-Intelligence-Modern-Approach-Edition/dp/0136042597%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0136042597}}
 
 @book{tremblay1985compiler,
 	Author = {Jean-Paul Tremblay and Paul G. Sorenson},
@@ -126,9 +118,7 @@
 	Isbn = {0070651612},
 	Publisher = {Mcgraw-Hill College},
 	Title = {The Theory and Practice of Compiler Writing (McGraw-Hill computer science series)},
-	Url = {http://www.amazon.com/Practice-Compiler-Writing-McGraw-Hill-computer/dp/0070651612%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0070651612},
 	Year = {1985},
-	Bdsk-Url-1 = {http://www.amazon.com/Practice-Compiler-Writing-McGraw-Hill-computer/dp/0070651612%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0070651612}}
 
 @book{gune2007parsing,
 	Author = {Dick Grune and Ceriel J.H. Jacobs},
@@ -137,9 +127,7 @@
 	Isbn = {038720248X},
 	Publisher = {Springer},
 	Title = {Parsing Techniques: A Practical Guide (Monographs in Computer Science)},
-	Url = {http://www.amazon.com/Parsing-Techniques-Practical-Monographs-Computer/dp/038720248X%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D038720248X},
 	Year = {2007},
-	Bdsk-Url-1 = {http://www.amazon.com/Parsing-Techniques-Practical-Monographs-Computer/dp/038720248X%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D038720248X}}
 
 @book{delatour2013contemporary,
 	Author = {HIRS Rozalie},
@@ -148,9 +136,7 @@
 	Isbn = {2752100809},
 	Publisher = {Delatour France},
 	Title = {Contemporary compositional techniques and Openmusic},
-	Url = {http://www.amazon.com/Contemporary-compositional-techniques-Openmusic-Rozalie/dp/B00D883SQ4%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB00D883SQ4},
 	Year = {2013},
-	Bdsk-Url-1 = {http://www.amazon.com/Contemporary-compositional-techniques-Openmusic-Rozalie/dp/B00D883SQ4%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3DB00D883SQ4}}
 
 @book{agon2006om,
 	Author = {Agon, Carlos and Assayag, G{\'e}rard and Bresson, Jean and Musique Institut de Recherche et de Coordination Acoustique},
@@ -164,7 +150,7 @@
 	Author = {Gullberg, Jan},
 	Date-Added = {2015-03-11 18:53:48 +0000},
 	Date-Modified = {2015-03-11 18:53:48 +0000},
-	Publisher = {WW Norton \&amp; Company},
+	Publisher = {WW Norton \& Company},
 	Title = {Mathematics: from the birth of numbers},
 	Year = {1997}}
 
