Updated references and bibliography.

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,140 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Josiah Wolf Oberholtzer at 2015-03-12 12:39:19 -0700 
+%% Created for Josiah Wolf Oberholtzer at 2015-03-17 09:51:37 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{boulanger2010audio,
+	Author = {Boulanger, Richard and Lazzarini, Victor},
+	Date-Added = {2015-03-17 16:51:21 +0000},
+	Date-Modified = {2015-03-17 16:51:21 +0000},
+	Publisher = {the MIT Press},
+	Title = {The audio programming book},
+	Year = {2010}}
+
+@article{hoos1998bd,
+	Author = {Hoos, Holger H and Hamel, Keith and Renz, Kai and Jurgen Kilian},
+	Date-Added = {2015-03-17 16:43:51 +0000},
+	Date-Modified = {2015-03-17 16:43:58 +0000},
+	Journal = {{Proceedings of International Computer Music Conference}},
+	Publisher = {Citeseer},
+	Title = {{The GUIDO Notation Format- A Novel Approach for Adequatly Representing Score-level Music}},
+	Year = {1998}}
+
+@article{kuuskankare2004recent,
+	Author = {Kuuskankare, Mika and Laurson, Mikael},
+	Date-Added = {2015-03-17 16:43:47 +0000},
+	Date-Modified = {2015-03-17 16:43:47 +0000},
+	Journal = {Sound and Music Computing},
+	Title = {{Recent Developments in ENP-score-notation}},
+	Volume = {4},
+	Year = {2004}}
+
+@article{laurson2003rtm,
+	Author = {Laurson, Mikael and Kuuskankare, Mika},
+	Date-Added = {2015-03-17 16:43:13 +0000},
+	Date-Modified = {2015-03-17 16:43:13 +0000},
+	Journal = {{Journ{\'e}es d'Informatique Musicale}},
+	Title = {{From RTM-notation to ENP-score-notation}},
+	Year = {2003}}
+
+@article{smith1972mw,
+	Author = {Smith, Leland},
+	Date-Added = {2015-03-17 16:42:44 +0000},
+	Date-Modified = {2015-03-17 16:42:51 +0000},
+	Journal = {Journal of the Audio Engineering Society},
+	Number = {1},
+	Pages = {7--14},
+	Title = {{SCORE- A Musician's Approach to Computer Music}},
+	Volume = {20},
+	Year = {1972}}
+
+@inproceedings{nienhuys2003ve,
+	Author = {Nienhuys, Han-Wen and Nieuwenhuizen, Jan},
+	Booktitle = {Proceedings of the XIV Colloquium on Musical Informatics (XIV CIM 2003)},
+	Date-Added = {2015-03-17 16:42:12 +0000},
+	Date-Modified = {2015-03-17 16:42:17 +0000},
+	Organization = {Citeseer},
+	Pages = {167--172},
+	Title = {{LilyPond, A System for Automated Music Engraving}},
+	Year = {2003}}
+
+@article{agostini2013real,
+	Author = {Agostini, Andrea and Ghisi, Daniele},
+	Date-Added = {2015-03-17 16:37:12 +0000},
+	Date-Modified = {2015-03-17 16:37:12 +0000},
+	Journal = {Contemporary Music Review},
+	Number = {1},
+	Pages = {41--48},
+	Publisher = {Taylor \& Francis},
+	Title = {{Real-time Computer-aided Composition with BACH}},
+	Volume = {32},
+	Year = {2013}}
+
+@article{laurson2009qf,
+	Author = {Laurson, Mikael and Kuuskankare, Mika and Norilo, Vesa},
+	Date-Added = {2015-03-17 16:36:35 +0000},
+	Date-Modified = {2015-03-17 16:36:42 +0000},
+	Journal = {Computer Music Journal},
+	Number = {1},
+	Pages = {19--31},
+	Publisher = {MIT Press},
+	Title = {{An Overview of PWGL, a Visual Programming Environment for Music}},
+	Volume = {33},
+	Year = {2009}}
+
+@article{assayag1999sw,
+	Author = {Assayag, G{\'e}rard and Rueda, Camilo and Laurson, Mikael and Agon, Carlos and Delerue, Olivier},
+	Copyright = {Copyright {\copyright} 1999 The MIT Press},
+	Date-Added = {2015-03-17 16:32:03 +0000},
+	Date-Modified = {2015-03-17 16:32:10 +0000},
+	Issn = {01489267},
+	Journal = {Computer Music Journal},
+	Jstor_Articletype = {research-article},
+	Jstor_Formatteddate = {Autumn, 1999},
+	Jstor_Issuetitle = {Recent Research at IRCAM},
+	Language = {English},
+	Number = {3},
+	Pages = {pp. 59-72},
+	Publisher = {The MIT Press},
+	Title = {{Computer-Assisted Composition at IRCAM: From PatchWork to OpenMusic}},
+	Url = {http://www.jstor.org/stable/3681240},
+	Volume = {23},
+	Year = {1999},
+	Bdsk-Url-1 = {http://www.jstor.org/stable/3681240}}
+
+@commented{trevino2012,
+	Author = {Trevi\~{n}o, Jeffrey},
+	Date-Added = {2015-03-17 16:31:24 +0000},
+	Date-Modified = {2015-03-17 16:31:40 +0000},
+	Title = {{Personal Communication}},
+	Year = {2012}}
+
+@commented{baca2012,
+	Author = {Ba\v{c}a, Trevor},
+	Date-Added = {2015-03-17 16:30:32 +0000},
+	Date-Modified = {2015-03-17 16:31:44 +0000},
+	Title = {{Personal Communication}},
+	Year = {2012}}
+
+@phdthesis{ariza2005,
+	Author = {Ariza, Christopher},
+	Date-Added = {2015-03-17 16:29:25 +0000},
+	Date-Modified = {2015-03-17 16:29:46 +0000},
+	File = {:Users/jeffreytrevino/Documents/UCSD/dissertation/dissSources/usingAlgorithmsForTheory/chrisAriza/arizaDiss.pdf:pdf},
+	Isbn = {1581122926},
+	Pages = {258},
+	Publisher = {Dissertation. com},
+	School = {New York University},
+	Title = {{An Open Design for Computer-aided Algorithmic Composition: athenaCL}},
+	Url = {http://books.google.com/books?hl=en\&amp;lr=\&amp;id=XukW-mq76mcC\&amp;oi=fnd\&amp;pg=PR3\&amp;dq=An+Open+Design+for+Computer-Aided+Algorithmic+Composition:+athenacl\&amp;ots=bHedXym8ZP\&amp;sig=9i2RQINqIVr2Y7sjxeD9e74myxA},
+	Volume = {54},
+	Year = {2005},
+	Bdsk-Url-1 = {http://books.google.com/books?hl=en%5C&amp;lr=%5C&amp;id=XukW-mq76mcC%5C&amp;oi=fnd%5C&amp;pg=PR3%5C&amp;dq=An+Open+Design+for+Computer-Aided+Algorithmic+Composition:+athenacl%5C&amp;ots=bHedXym8ZP%5C&amp;sig=9i2RQINqIVr2Y7sjxeD9e74myxA}}
 
 @phdthesis{nauert1997timespan,
 	Author = {Nauert, Paul Charles},
@@ -23,7 +151,7 @@
 	Isbn = {0262033844},
 	Publisher = {The MIT Press},
 	Title = {Introduction to Algorithms, 3rd Edition},
-	Year = {2009},
+	Year = {2009}}
 
 @book{lerdahl1985generative,
 	Author = {Lerdahl, Fred and Jackendoff, Ray},
@@ -40,7 +168,7 @@
 	Isbn = {0689300549},
 	Publisher = {Atheneum},
 	Title = {The Farthest Shore},
-	Year = {1972},
+	Year = {1972}}
 
 @book{calvino1978invisible,
 	Author = {Italo Calvino},
@@ -49,7 +177,7 @@
 	Isbn = {0156453800},
 	Publisher = {Harcourt Brace Jovanovich},
 	Title = {Invisible Cities},
-	Year = {1978},
+	Year = {1978}}
 
 @book{marriott1998programming,
 	Author = {Marriott, Kim and Stuckey, Peter J},
@@ -109,7 +237,7 @@
 	Isbn = {0136042597},
 	Publisher = {Prentice Hall},
 	Title = {Artificial Intelligence: A Modern Approach (3rd Edition)},
-	Year = {2009},
+	Year = {2009}}
 
 @book{tremblay1985compiler,
 	Author = {Jean-Paul Tremblay and Paul G. Sorenson},
@@ -118,7 +246,7 @@
 	Isbn = {0070651612},
 	Publisher = {Mcgraw-Hill College},
 	Title = {The Theory and Practice of Compiler Writing (McGraw-Hill computer science series)},
-	Year = {1985},
+	Year = {1985}}
 
 @book{gune2007parsing,
 	Author = {Dick Grune and Ceriel J.H. Jacobs},
@@ -127,7 +255,7 @@
 	Isbn = {038720248X},
 	Publisher = {Springer},
 	Title = {Parsing Techniques: A Practical Guide (Monographs in Computer Science)},
-	Year = {2007},
+	Year = {2007}}
 
 @book{delatour2013contemporary,
 	Author = {HIRS Rozalie},
@@ -136,7 +264,7 @@
 	Isbn = {2752100809},
 	Publisher = {Delatour France},
 	Title = {Contemporary compositional techniques and Openmusic},
-	Year = {2013},
+	Year = {2013}}
 
 @book{agon2006om,
 	Author = {Agon, Carlos and Assayag, G{\'e}rard and Bresson, Jean and Musique Institut de Recherche et de Coordination Acoustique},
