--- a/source/endmatter/glossary.tex
+++ b/source/endmatter/glossary.tex
@@ -22,6 +22,8 @@
 
 \item[configuration] ...
 
+\item[Consort] ...
+
 \item[container] ...
 
 \item[context] ...
@@ -80,7 +82,11 @@
 
 \item[iterator] ...
 
+\item[LaTeX] ...
+
 \item[leaf] ...
+
+\item[LilyPond] ...
 
 \item[list] ...
 
@@ -128,6 +134,8 @@
 
 \item[population] ...
 
+\item[Postscript] ...
+
 \item[pre-prolated] ...
 
 \item[prolation] ...
@@ -135,6 +143,8 @@
 \item[property] ...
 
 \item[protocol] ...
+
+\item[Python] ...
 
 \item[rational] ...
 
