Updated glossary listing.

--- a/source/endmatter/glossary.tex
+++ b/source/endmatter/glossary.tex
@@ -6,7 +6,9 @@
 
 \item[attach] ...
 
-\item[binding] ...
+\item[attribute] ...
+
+\item[binding, name] ...
 
 \item[builtin] ...
 
@@ -24,7 +26,9 @@
 
 \item[Consort] ...
 
-\item[container] ...
+\item[container (Abjad)] ...
+
+\item[container (Python)] ...
 
 \item[context] ...
 
@@ -32,11 +36,17 @@
 
 \item[cycle] ...
 
+\item[demultiplex] ...
+
 \item[dependent] ...
+
+\item[design pattern] ...
 
 \item[detach] ...
 
 \item[dictionary] ...
+
+\item[division] ...
 
 \item[durated] ...
 
@@ -68,7 +78,7 @@
 
 \item[inscription] ...
 
-\item[interpretation] ...
+\item[interpretation, score] ...
 
 \item[inventory] ...
 
@@ -110,6 +120,8 @@
 
 \item[module] ...
 
+\item[multiplex] ...
+
 \item[music] ...
 
 \item[mutability] ...
@@ -129,8 +141,6 @@
 \item[parent] ...
 
 \item[parentage] ...
-
-\item[pattern] ...
 
 \item[population] ...
 
