--- a/dissertation.tex
+++ b/dissertation.tex
@@ -14,6 +14,7 @@
 \usepackage{csquotes}
 \usepackage{excludeonly}
 \usepackage{fancyvrb}
+\usepackage{float}
 \usepackage{imakeidx}
 \usepackage{lipsum}
 \usepackage{listings}
@@ -93,6 +94,21 @@
 }
 
 \makeindex[columns=3, title=Index, intoc]
+
+\makeatletter
+\def\cleardoublepage{\clearpage\if@twoside%
+\ifodd\c@page\else
+\vspace*{\fill}
+\hfill
+\begin{center}
+This page intentionally left blank.
+\end{center}
+\vspace{\fill}
+\thispagestyle{fancy}
+\newpage
+\if@twocolumn\hbox{}\newpage\fi\fi\fi
+}
+\makeatother
 
 \begin{document}
 
