Wrote about pitch-handlers.

--- a/source/endmatter/glossary.tex
+++ b/source/endmatter/glossary.tex
@@ -1,5 +1,7 @@
 \begin{description}
 
+\item[abstract] ...
+
 \item[algorithm] \lipsum[1]
 
 \item[annotation] \lipsum[2]
@@ -21,6 +23,8 @@
 \item[collection] ...
 
 \item[component] ...
+
+\item[concrete] ...
 
 \item[configuration] ...
 
