Improved typewriter text hyphenation.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -23,6 +23,7 @@
 \usepackage{pdfpages}
 \usepackage{textcomp}
 \usepackage[color=yellow]{todonotes}
+\usepackage[htt]{hyphenat}
 
 \usepackage[
     labelfont={sc,scriptsize},
