Updated dedication and glossary.

--- a/source/endmatter/glossary.tex
+++ b/source/endmatter/glossary.tex
@@ -6,6 +6,10 @@
 
 \item[annotation] \lipsum[2]
 
+\item[assignable] ...
+
+\item[assignability] ...
+
 \item[attach] ...
 
 \item[attribute] ...
@@ -134,6 +138,8 @@
 
 \item[namespace] ...
 
+\item[node] ...
+
 \item[object] ...
 
 \item[offset] ...
@@ -165,6 +171,8 @@
 \item[reference] ...
 
 \item[resolve] ...
+
+\item[root] ...
 
 \item[seed] ...
 
