--- a/source/frontmatter/dedication.tex
+++ b/source/frontmatter/dedication.tex
@@ -1,8 +1,10 @@
 % dedication text
 
-For Cindy\\ 
+\noindent For Cindy
+
 \vspace{\baselineskip}
-\emph{Rhythm is a dancer.}
+
+\noindent \emph{Rhythm is a dancer.}
 
 \begin{figure}
     \vspace{50pt}
