--- a/source/endmatter/glossary.tex
+++ b/source/endmatter/glossary.tex
@@ -6,6 +6,8 @@
 
 \item[annotation] \lipsum[2]
 
+\item[arborescence] ...
+
 \item[assignable] ...
 
 \item[assignability] ...
@@ -53,6 +55,8 @@
 \item[detach] ...
 
 \item[dictionary] ...
+
+\item[directed graph] ...
 
 \item[division] ...
 
