Added xfrac package.
Use \sfrac{n}{d} to create nice fractions.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -24,6 +24,7 @@
 \usepackage{textcomp}
 \usepackage[color=yellow]{todonotes}
 \usepackage[htt]{hyphenat}
+\usepackage{xfrac}
 
 \usepackage[
     labelfont={sc,scriptsize},
