Added more entries to glossary.

--- a/source/endmatter/glossary.tex
+++ b/source/endmatter/glossary.tex
@@ -106,6 +106,8 @@
 
 \item[iterator] ...
 
+\item[key] ...
+
 \item[LaTeX] ...
 
 \item[leaf] ...
@@ -147,6 +149,10 @@
 \item[node] ...
 
 \item[object] ...
+
+\item[object-model] ...
+
+\item[object-oriented] ...
 
 \item[offset] ...
 
@@ -205,6 +211,8 @@
 \item[subclass] ...
 
 \item[subroutine] ...
+
+\item[subtree] ...
 
 \item[talea] ...
 
