--- a/dissertation.tex
+++ b/dissertation.tex
@@ -181,7 +181,7 @@ This page intentionally left blank.
 
 \cleardoublepage
 \addcontentsline{toc}{chapter}{References}
-\nocite{*}
+%\nocite{*}
 \bibliographystyle{apalike2}
 \bibliography{references}
 
