--- a/references.bib
+++ b/references.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Josiah Wolf Oberholtzer at 2015-03-17 09:51:37 -0700 
+%% Created for Josiah Wolf Oberholtzer at 2015-03-27 21:16:18 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -141,6 +141,7 @@
 	Date-Added = {2015-03-12 19:39:07 +0000},
 	Date-Modified = {2015-03-12 19:39:17 +0000},
 	Publisher = {Columbia University},
+	School = {Columbia University},
 	Title = {Timespan formation in nonmetric, posttonal music},
 	Year = {1997}}
 
@@ -329,6 +330,24 @@
 	Publisher = {MIT press},
 	Title = {Microsound},
 	Year = {2004}}
+
+@webpage{baca2011xi,
+	Author = {Ba\v{c}a, Trevor and Oberholtzer, Josiah and Adan, Victor},
+	Booktitle = {Abjad Reference Manual},
+	Date-Added = {2013-04-10 22:52:42 +0000},
+	Date-Modified = {2015-03-28 04:16:05 +0000},
+	Title = {{Abjad Reference Manual}},
+	Url = {http://www.projectabjad.org},
+	Year = {2011},
+	Bdsk-Url-1 = {http://www.projectabjad.org}}
+
+@book{vanrossum2003ys,
+	Author = {Van Rossum, G. and Drake, F. L.},
+	Date-Added = {2013-02-09 23:56:47 +0000},
+	Date-Modified = {2013-06-05 02:00:16 +0000},
+	Publisher = {Network Theory Limited},
+	Title = {{Python Language Reference Manual}},
+	Year = {2003}}
 
 @book{gamma1994design,
 	Author = {Gamma, Erich and Helm, Richard and Johnson, Ralph and Vlissides, John},
