Wrote about notation.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -77,14 +77,14 @@
     language=[LaTeX]TeX,
 }
 
-%\includeonly{
+\includeonly{
 %    source/chapters/introduction,
-%    source/chapters/a-model-of-notation,
-%    source/chapters/time-tools,
-%    source/chapters/a-model-of-composition,
+    source/chapters/a-model-of-notation,
+    source/chapters/time-tools,
+    source/chapters/a-model-of-composition,
 %    source/chapters/practicalities,
 %    source/chapters/conclusion,
-%}
+}
 %\excludeonly{
 %    source/chapters/score-aurora,
 %    source/chapters/score-plague-water,
@@ -123,8 +123,8 @@ This page intentionally left blank.
 \abstractpage
 \tableofcontents
 %\listoffigures
-\dedicationpage
-\acknowledgments
+%\dedicationpage
+%\acknowledgments
 
 \mainmatter
 \doublespacing
