--- a/dissertation.tex
+++ b/dissertation.tex
@@ -77,14 +77,14 @@
     language=[LaTeX]TeX,
 }
 
-%\includeonly{
+\includeonly{
 %    source/chapters/introduction,
-%    source/chapters/a-model-of-notation,
+    source/chapters/a-model-of-notation,
 %    source/chapters/time-tools,
 %    source/chapters/a-model-of-composition,
 %    source/chapters/practicalities,
 %    source/chapters/conclusion,
-%}
+}
 %\excludeonly{
 %    source/chapters/score-aurora,
 %    source/chapters/score-plague-water,
