--- a/dissertation.tex
+++ b/dissertation.tex
@@ -80,8 +80,8 @@
 \includeonly{
 %    source/chapters/introduction,
     source/chapters/a-model-of-notation,
-%    source/chapters/time-tools,
-%    source/chapters/a-model-of-composition,
+    source/chapters/time-tools,
+    source/chapters/a-model-of-composition,
 %    source/chapters/practicalities,
 %    source/chapters/conclusion,
 }
