--- a/dissertation.tex
+++ b/dissertation.tex
@@ -12,6 +12,7 @@
 \usepackage[export]{adjustbox}
 \usepackage{color}
 \usepackage{csquotes}
+\usepackage{dirtree}
 \usepackage{excludeonly}
 \usepackage{fancyvrb}
 \usepackage{float}
@@ -77,14 +78,15 @@
     language=[LaTeX]TeX,
 }
 
-\includeonly{
+%\includeonly{
 %    source/chapters/introduction,
-    source/chapters/a-model-of-notation,
-    source/chapters/time-tools,
-    source/chapters/a-model-of-composition,
+%    source/chapters/a-model-of-notation,
+%    source/chapters/time-tools,
+%    source/chapters/a-model-of-composition,
 %    source/chapters/practicalities,
 %    source/chapters/conclusion,
-}
+%}
+
 %\excludeonly{
 %    source/chapters/score-aurora,
 %    source/chapters/score-plague-water,
@@ -118,6 +120,13 @@ This page intentionally left blank.
 \frontmatter
 \pagenumbering{roman}
 \input{source/frontmatter/personalize}
+
+\includepdf[
+    pages=-,
+    pagecommand={\thispagestyle{empty}}
+]{assets/dac-oberholtzer-2015.pdf}
+\cleardoublepage
+
 \maketitle
 \copyrightpage
 \abstractpage
