--- a/dissertation.tex
+++ b/dissertation.tex
@@ -79,12 +79,12 @@
 }
 
 \includeonly{
-%    source/chapters/introduction,
+    source/chapters/introduction,
     source/chapters/a-model-of-notation,
-%    source/chapters/time-tools,
-%    source/chapters/a-model-of-composition,
+    source/chapters/time-tools,
+    source/chapters/a-model-of-composition,
     source/chapters/practicalities,
-%    source/chapters/conclusion,
+    source/chapters/conclusion,
 }
 
 %\excludeonly{
