Added notes, mainly to chapter 5.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -78,14 +78,14 @@
     language=[LaTeX]TeX,
 }
 
-\includeonly{
-    source/chapters/introduction,
-    source/chapters/a-model-of-notation,
-    source/chapters/time-tools,
-    source/chapters/a-model-of-composition,
-    source/chapters/practicalities,
-    source/chapters/conclusion,
-}
+%\includeonly{
+%    source/chapters/introduction,
+%    source/chapters/a-model-of-notation,
+%    source/chapters/time-tools,
+%    source/chapters/a-model-of-composition,
+%    source/chapters/practicalities,
+%    source/chapters/conclusion,
+%}
 
 %\excludeonly{
 %    source/chapters/score-aurora,
@@ -157,6 +157,8 @@ This page intentionally left blank.
 \include{source/chapters/score-zaira}
 \include{source/chapters/score-armilla}
 \include{source/chapters/score-ersilia}
+
+\part{Appendices}
 
 \lstset{
     basicstyle=\scriptsize\ttfamily,
