--- a/source/endmatter/colophon.tex
+++ b/source/endmatter/colophon.tex
@@ -3,19 +3,28 @@
 \begin{figure}
     \vspace{50pt}
     \centering
-    \includegraphics[width=0.51\textwidth]{assets/holbein-physician.jpg}
+    \includegraphics[width=0.5\textwidth]{assets/holbein-ossuary.jpg}
     \\
-    \emph{The Physician}
+    \emph{The Ossuary}
     \\
-    from Hans Holbein's \emph{Danse Macabre}
+    Hans Holbein
+    \\
+    \emph{The Dance of Death}
+    \\
+    (c.1527)
 \end{figure}
 
 \begin{center}
-\parbox{200pt}{\lettrine[lines=3,slope=-2pt,nindent=-4pt]{\textcolor{SchoolColor}{T}}{his
-thesis was typeset} using \LaTeX, originally developed by Leslie Lamport and
-based on Donald Knuth's \TeX. The body text is set in 11 point Egenolff-Berner
-Garamond, a revival of Claude Garamont's humanist typeface. The interactive
-Python interpreter examples and their graphic output were managed by the
-\emph{abjad-book} tool. Notation examples were rendered by LilyPond.
-Graph-theoretic examples were rendered by Graphviz. }
+
+\parbox{220pt}{
+
+\eblettrine{T}{his thesis was typeset} using \LaTeX, originally
+developed by Leslie Lamport and based on Donald Knuth's \TeX. The body text is
+set in 11 point Egenolff-Berner Garamond, a revival of Claude Garamont's
+humanist typeface. The interactive Python interpreter examples and their
+graphic output were managed by the \emph{abjad-book} tool. Notation examples
+were rendered by LilyPond. Graph-theoretic examples were rendered by Graphviz.
+
+}
+
 \end{center}
