--- a/source/frontmatter/dedication.tex
+++ b/source/frontmatter/dedication.tex
@@ -9,9 +9,13 @@
 \begin{figure}
     \vspace{50pt}
     \centering
-    \includegraphics[width=0.51\textwidth]{assets/holbein-astrologer.jpg}
+    \includegraphics[width=0.50\textwidth]{assets/holbein-astrologer.jpg}
     \\
     \emph{The Astrologer}
     \\
-    from Hans Holbein's \emph{Danse Macabre}
+    Hans Holbein
+    \\
+    \emph{The Dance of Death}
+    \\
+    (c.1527)
 \end{figure}
