Worked on lettrines.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -138,6 +138,11 @@ This page intentionally left blank.
 {\textin{\textcolor{SchoolColor}{#2}}}{#3}%
 }
 
+\newcommand{\eblettrinedbl}[3][]{%
+\lettrine[findent=10pt,lines=2,depth=1,lhang=0.,lraise=-0.30,loversize=0.40,slope=0pt,nindent=0pt]
+{\textin{\textcolor{SchoolColor}{#2}}}{#3}%
+}
+
 \begin{document}
 
 \frontmatter
