--- a/dissertation.tex
+++ b/dissertation.tex
@@ -9,7 +9,9 @@
     %showframe=true,
 }
 
+\usepackage[color=yellow]{todonotes}
 \usepackage[export]{adjustbox}
+\usepackage[htt]{hyphenat}
 \usepackage{color}
 \usepackage{csquotes}
 \usepackage{dirtree}
@@ -20,11 +22,11 @@
 \usepackage{lipsum}
 \usepackage{listings}
 \usepackage{microtype}
+\usepackage{minted}
 \usepackage{multicol}
 \usepackage{pdfpages}
 \usepackage{textcomp}
-\usepackage[color=yellow]{todonotes}
-\usepackage[htt]{hyphenat}
+\usepackage{upquote}
 \usepackage{xfrac}
 
 \usepackage[
@@ -50,32 +52,17 @@
     \input{tmp/tmp.tex}
 }
 
-\definecolor{bluekeywords}{rgb}{0.13,0.13,1}
-\definecolor{greencomments}{rgb}{0,0.5,0}
-\definecolor{redstrings}{rgb}{0.9,0,0}
-\definecolor{grey}{rgb}{0.5,0.5,0.5}
-\definecolor{lightgrey}{rgb}{0.75,0.75,0.75}
+\setmonofont{Inconsolata}[Scale=MatchLowercase]
 
-\lstset{
-    basicstyle=\scriptsize\ttfamily,
-    breakatwhitespace=false,
-    breaklines=false,
-    commentstyle=\color{greencomments},
-    escapeinside={(*@}{@*)},
-    frame=l,
+\setminted{
+    autogobble=true,
+    fontsize=\footnotesize,
+    frame=leftline,
     framerule=1.5pt,
     framesep=6pt,
-    keywordstyle=\color{bluekeywords}\bfseries,
-    language=Python,
-    showspaces=false,
-    showstringspaces=false,
-    showtabs=false,
-    stringstyle=\color{redstrings},
-    upquote=true,
-}
-
-\lstdefinestyle{beep}{
-    language=[LaTeX]TeX,
+    obeytabs=true,
+    tabsize=4,
+    xleftmargin=-6pt,
 }
 
 \includeonly{
