Mentioned Inconsolata in colophon.

--- a/source/endmatter/colophon.tex
+++ b/source/endmatter/colophon.tex
@@ -18,12 +18,13 @@
 
 \parbox{220pt}{
 
-\eblettrine{T}{his thesis was typeset} using \LaTeX, originally
-developed by Leslie Lamport and based on Donald Knuth's \TeX. The body text is
-set in 11 point Egenolff-Berner Garamond, a revival of Claude Garamont's
-humanist typeface. The interactive Python interpreter examples and their
-graphic output were managed by the \emph{abjad-book} tool. Notation examples
-were rendered by LilyPond. Graph-theoretic examples were rendered by Graphviz.
+\eblettrine{T}{his thesis was typeset} using \LaTeX, originally developed by
+Leslie Lamport and based on Donald Knuth's \TeX. The body text is set in 11
+point Egenolff-Berner Garamond, a revival of Claude Garamont's humanist
+typeface, and 10 point Inconsolata. The interactive Python interpreter sessions
+and their graphic output were managed by the \emph{abjad-book} tool. Notation
+examples were rendered by LilyPond and graph-theoretic examples were rendered
+by Graphviz.
 
 }
 
