--- a/source/endmatter/colophon.tex
+++ b/source/endmatter/colophon.tex
@@ -21,10 +21,11 @@
 \eblettrine{T}{his thesis was typeset} using \LaTeX, originally developed by
 Leslie Lamport and based on Donald Knuth's \TeX. The body text is set in 11
 point Egenolff-Berner Garamond, a revival of Claude Garamont's humanist
-typeface, and 10 point Inconsolata. The interactive Python interpreter sessions
-and their graphic output were managed by the \emph{abjad-book} tool. Notation
-examples were rendered by LilyPond and graph-theoretic examples were rendered
-by Graphviz.
+typeface. The monospaced text is set in 10 point Inconsolata. The interactive
+Python interpreter sessions and their graphic output were managed by
+\emph{abjad-book}, a tool for executing and embedding Python code and music
+notation in \LaTeX documents. Notation examples were rendered by LilyPond and
+graph-theoretic examples were rendered by Graphviz.
 
 }
 
