--- a/dissertation.tex
+++ b/dissertation.tex
@@ -72,6 +72,12 @@
 %    source/chapters/a-model-of-composition,
     source/chapters/practicalities,
 %    source/chapters/conclusion,
+%    source/chapters/score-aurora,
+%    source/chapters/score-plague-water,
+%    source/chapters/score-zaira,
+%    source/chapters/score-armilla,
+%    source/chapters/score-ersilia,
+%    source/appendices/appendices,
     source/endmatter/colophon
 }
 
@@ -119,15 +125,34 @@ This page intentionally left blank.
 
 \usepackage{ebgaramond}
 
+\newfontfamily\goudy[Scale=6]{Goudy Initialen}
+\renewcommand*{\LettrineFont}{\goudy}
+
 \newcommand{\eblettrine}[3][]{%
-\lettrine[findent=6pt,lines=3,depth=1,lhang=0.,loversize=0.,slope=0pt,nindent=0pt]
-{\textin{\textcolor{SchoolColor}{#2}}}{#3}%
-}
+\lettrine[
+    findent=2pt,
+    depth=1,
+    lines=3,
+    lhang=0.,
+    loversize=0.,
+    lraise=-0.50,
+    slope=0pt,
+    nindent=0pt,
+    #1
+]{\textcolor{SchoolColor}{#2}}{#3}}
 
 \newcommand{\eblettrinedbl}[3][]{%
-\lettrine[findent=10pt,lines=2,depth=1,lhang=0.,lraise=-0.30,loversize=0.40,slope=0pt,nindent=0pt]
-{\textin{\textcolor{SchoolColor}{#2}}}{#3}%
-}
+\lettrine[
+    findent=8pt,
+    depth=0,
+    lhang=0.,
+    lines=3,
+    loversize=0.,
+    lraise=-0.02,
+    slope=0pt,
+    nindent=0pt,
+    #1
+]{\textcolor{SchoolColor}{#2}}{#3}}
 
 \begin{document}
 
@@ -149,7 +174,7 @@ This page intentionally left blank.
 \tableofcontents
 %\listoffigures
 \dedicationpage
-\acknowledgments
+%\acknowledgments
 
 \mainmatter
 \doublespacing
@@ -196,7 +221,7 @@ This page intentionally left blank.
 \cleardoublepage
 \printindex
 
-\maketheglossary
+%\maketheglossary
 
 \cleardoublepage
 \addcontentsline{toc}{chapter}{References}
