Tweaked other chapters.

--- a/source/frontmatter/dedication.tex
+++ b/source/frontmatter/dedication.tex
@@ -2,9 +2,9 @@
 
 \noindent For Cindy
 
-\vspace{\baselineskip}
-
-\noindent \emph{Rhythm is a dancer.}
+%\vspace{\baselineskip}
+%
+%\noindent \emph{Rhythm is a dancer.}
 
 \begin{figure}
     \vspace{50pt}
