--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Josiah Wolf Oberholtzer at 2015-03-27 21:16:18 -0700 
+%% Created for Josiah Wolf Oberholtzer at 2015-05-02 17:03:36 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{beazley2013python,
+	Author = {David Beazley and Brian K. Jones},
+	Date-Added = {2015-05-03 00:03:24 +0000},
+	Date-Modified = {2015-05-03 00:03:35 +0000},
+	Isbn = {1449340377},
+	Publisher = {O'Reilly Media},
+	Title = {Python Cookbook, Third edition},
+	Url = {http://www.amazon.com/Python-Cookbook-Third-David-Beazley/dp/1449340377%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D1449340377},
+	Year = {2013},
+	Bdsk-Url-1 = {http://www.amazon.com/Python-Cookbook-Third-David-Beazley/dp/1449340377%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D1449340377}}
+
+@book{loeliger2009git,
+	Author = {Jon Loeliger},
+	Date-Added = {2015-05-03 00:00:09 +0000},
+	Date-Modified = {2015-05-03 00:00:25 +0000},
+	Isbn = {0596520123},
+	Publisher = {O'Reilly Media},
+	Title = {Version Control with Git: Powerful tools and techniques for collaborative software development},
+	Url = {http://www.amazon.com/Version-Control-Git-collaborative-development/dp/0596520123%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0596520123},
+	Year = {2009},
+	Bdsk-Url-1 = {http://www.amazon.com/Version-Control-Git-collaborative-development/dp/0596520123%3FSubscriptionId%3D0JYN1NVW651KCA56C102%26tag%3Dtechkie-20%26linkCode%3Dxm2%26camp%3D2025%26creative%3D165953%26creativeASIN%3D0596520123}}
 
 @book{boulanger2010audio,
 	Author = {Boulanger, Richard and Lazzarini, Victor},
