--- a/dissertation.tex
+++ b/dissertation.tex
@@ -68,10 +68,10 @@
 \includeonly{
     source/chapters/introduction,
     source/chapters/a-model-of-notation,
-%    source/chapters/time-tools,
-%    source/chapters/a-model-of-composition,
-%    source/chapters/practicalities,
-%    source/chapters/conclusion,
+    source/chapters/time-tools,
+    source/chapters/a-model-of-composition,
+    source/chapters/practicalities,
+    source/chapters/conclusion,
 %    source/chapters/score-aurora,
 %    source/chapters/score-plague-water,
 %    source/chapters/score-zaira,
