--- a/dissertation.tex
+++ b/dissertation.tex
@@ -74,11 +74,11 @@
     source/chapters/a-model-of-composition,
     source/chapters/practicalities,
     source/chapters/conclusion,
-%    source/chapters/score-aurora,
-%    source/chapters/score-plague-water,
-%    source/chapters/score-zaira,
-%    source/chapters/score-armilla,
-%    source/chapters/score-ersilia,
+    source/chapters/score-aurora,
+    source/chapters/score-plague-water,
+    source/chapters/score-zaira,
+    source/chapters/score-armilla,
+    source/chapters/score-ersilia,
 %    source/appendices/appendices,
     source/endmatter/colophon
 }
