Working on introduction.

--- a/packages/Harvard/style.sty
+++ b/packages/Harvard/style.sty
@@ -87,10 +87,9 @@
 }
 
 \newcommand{\acknowledgments}{
-	\chapter*{Acknowledgments}
-	\noindent
+	\newpage \thispagestyle{fancy} \vspace*{\fill}
 	\input{source/frontmatter/thanks}
-	\vspace*{\fill}
+	\vspace*{\fill} \newpage \rm
 }
 
 \newcommand{\maketheglossary}{
