--- a/source/frontmatter/thanks.tex
+++ b/source/frontmatter/thanks.tex
@@ -1,38 +1,39 @@
 % the acknowledgments section
 
-\newthought{I would like to thank:}
+\begin{figure}
+\vspace{50pt}
+\begin{center}
+27\\
+KE$\Phi$A$\Lambda$H KZ\\
+The Sorcerer
+\end{center}
 
-%My childhood music teachers: Dr. John McCann, Beth Welty, Howard Frazin.
-%
-%My composition teachers at Oberlin, Lewis Nielson and Randolph Coleman.
-%
-%The open source community, especially Python and LilyPond.
-%
-%Amie Weiss.
-%
-%Jon Hepfer.
-%
-%Kristin Anderson.
-%
-%Myke Cuthbert.
-%
-%Steve Takasugi.
-%
-%Rand Steiger.
-%
-%Hans Tutschku and Chaya Czernowin.
-%
-%My Abjad collaborators, Trevor Ba\v{c}a and Jeff Trevi\~{n}o, and everyone who
-%supports and benefits from that project.
-%
-%Edgar Barroso.
+\begin{center}
 
-All of my friends and colleagues at Harvard and beyond.
+\parbox{250pt}{
 
-All of the wonderful musicians who've given my music a chance.
+\begin{hangparas}{2em}{1}A Sorcerer by the power of his magick had subdued all things to himself.
 
-The cats, not that they care.
+Would he travel? He could fly through space more swiftly than the stars.
 
-My family, who do.
+Would he eat, drink, and take his pleasure? There was none that did not
+instantly obey his bidding.
 
-My partner, Cindy.
+In the whole system of ten million times ten million spheres upon the two and
+twenty million planes he had his desire.
+
+And with all this he was but himself.
+
+Alas!
+\end{hangparas}
+
+%\vspace{\baselineskip}
+
+\begin{center}
+- Aleister Crowley, \emph{The Book of Lies}
+\end{center}
+
+}
+
+\end{center}
+\end{figure}
