--- a/dissertation.tex
+++ b/dissertation.tex
@@ -27,6 +27,7 @@
 \usepackage{textcomp}
 \usepackage{upquote}
 \usepackage{xfrac}
+\usepackage{hanging}
 
 \DeclareInstance{xfrac}{big}{text}{
     scale-factor=1.25,
@@ -69,16 +70,16 @@
 
 \includeonly{
     source/chapters/introduction,
-    source/chapters/a-model-of-notation,
-    source/chapters/time-tools,
-    source/chapters/a-model-of-composition,
-    source/chapters/practicalities,
+%    source/chapters/a-model-of-notation,
+%    source/chapters/time-tools,
+%    source/chapters/a-model-of-composition,
+%    source/chapters/practicalities,
     source/chapters/conclusion,
-    source/chapters/score-aurora,
-    source/chapters/score-plague-water,
-    source/chapters/score-zaira,
-    source/chapters/score-armilla,
-    source/chapters/score-ersilia,
+%    source/chapters/score-aurora,
+%    source/chapters/score-plague-water,
+%    source/chapters/score-zaira,
+%    source/chapters/score-armilla,
+%    source/chapters/score-ersilia,
 %    source/appendices/appendices,
     source/endmatter/colophon
 }
@@ -174,7 +175,7 @@ This page intentionally left blank.
 \tableofcontents
 %\listoffigures
 \dedicationpage
-%\acknowledgments
+\acknowledgments
 
 \mainmatter
 \doublespacing
