--- a/references.bib
+++ b/references.bib
@@ -1,17 +1,18 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Josiah Wolf Oberholtzer at 2015-05-08 15:13:59 -0700 
+%% Created for Josiah Wolf Oberholtzer at 2015-05-08 16:58:06 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
 
-@unpublished{baca2015tenor,
+@article{baca2015tenor,
 	Author = {Ba\v{c}a, Trevor and Oberholtzer, Josiah and Trevi\~{n}o, Jeffrey and Ad\'{a}n, V\'{i}ctor},
 	Date-Added = {2015-05-08 22:09:06 +0000},
-	Date-Modified = {2015-05-08 22:13:58 +0000},
+	Date-Modified = {2015-05-08 23:58:05 +0000},
+	Note = {Forthcoming},
 	Title = {Abjad: An open-source software system for Formalized Score Control},
 	Year = {2015}}
 
@@ -361,7 +362,7 @@
 	Year = {2004}}
 
 @webpage{baca2011xi,
-	Author = {Ba\v{c}a, Trevor and Oberholtzer, Josiah and Ad\'{a}n, V\'{i}ctor },
+	Author = {Ba\v{c}a, Trevor and Oberholtzer, Josiah and Ad\'{a}n, V\'{i}ctor},
 	Booktitle = {Abjad Reference Manual},
 	Date-Added = {2013-04-10 22:52:42 +0000},
 	Date-Modified = {2015-05-08 22:13:48 +0000},
