Cleaned up references.

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,25 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Josiah Wolf Oberholtzer at 2015-05-08 16:58:06 -0700 
+%% Created for Josiah Wolf Oberholtzer at 2015-05-10 11:30:21 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{wishart1996sonic,
+	Author = {Wishart, T. and Emmerson, S.},
+	Date-Added = {2015-05-10 18:29:49 +0000},
+	Date-Modified = {2015-05-10 18:29:49 +0000},
+	Isbn = {9783718658466},
+	Lccn = {99458457},
+	Publisher = {Harwood Academic Publishers},
+	Series = {Contemporary music studies},
+	Title = {On Sonic Art},
+	Url = {http://books.google.com/books?id=7veZMgEACAAJ},
+	Year = {1996},
+	Bdsk-Url-1 = {http://books.google.com/books?id=7veZMgEACAAJ}}
 
 @article{baca2015tenor,
 	Author = {Ba\v{c}a, Trevor and Oberholtzer, Josiah and Trevi\~{n}o, Jeffrey and Ad\'{a}n, V\'{i}ctor},
@@ -337,14 +350,6 @@
 	Title = {Languages of art: An approach to a theory of symbols},
 	Year = {1976}}
 
-@book{wishart1996sonic,
-	Author = {Wishart, Trevor},
-	Date-Added = {2015-03-11 18:51:28 +0000},
-	Date-Modified = {2015-03-11 18:51:28 +0000},
-	Publisher = {Psychology Press},
-	Title = {On sonic art},
-	Year = {1996}}
-
 @book{fowler2002patterns,
 	Author = {Fowler, Martin},
 	Date-Added = {2015-03-11 18:44:13 +0000},
@@ -398,8 +403,7 @@
 @book{xenakis1992formalized,
 	Author = {Xenakis, Iannis},
 	Date-Added = {2015-03-11 18:42:52 +0000},
-	Date-Modified = {2015-03-11 18:42:52 +0000},
-	Number = {6},
+	Date-Modified = {2015-05-10 18:30:20 +0000},
 	Publisher = {Pendragon Press},
 	Title = {Formalized music: thought and mathematics in composition},
 	Year = {1992}}
