Double-spaced abstract.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -4,9 +4,8 @@
 \documentclass[oneside,School=Harvard]{Dissertate}
 
 \geometry{
-    a4paper,
     margin=1in,
-    %showframe=true,
+    papersize={8.5in, 11in},
 }
 
 \usepackage[color=yellow]{todonotes}
