Adjusted footnote spacing.

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -28,6 +28,8 @@
 \usepackage{xfrac}
 \usepackage{hanging}
 
+\setlength{\footnotesep}{1.5\baselineskip}
+
 \DeclareInstance{xfrac}{big}{text}{
     scale-factor=1.25,
     numerator-bot-sep=2pt,
